--- a/Top_Das_Phones/package.json
+++ b/Top_Das_Phones/package.json
@@ -3,6 +3,9 @@
   "version": "0.0.1",
   "scripts": {
     "ng": "ng",
+    "generatecomponent": "ng generate component",
+    "generatepipe": "ng generate pipe",
+    "generatedirective": "ng generate directive",
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
